k8s/user-deployment.yaml

  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: user-service
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: user-service
    template:
      metadata:
        labels:
          app: user-service
      spec:
        containers:
          - name: user-service
            image: frequent-flier-app-user
            imagePullPolicy: Never
            ports:
              - containerPort: 8080
            readinessProbe:
              httpGet:
                path: /q/health/ready
                port: 8080
              initialDelaySeconds: 10
              periodSeconds: 5
              failureThreshold: 3
            livenessProbe:
              httpGet:
                path: /q/health/live
                port: 8080
              initialDelaySeconds: 15
              periodSeconds: 10
              failureThreshold: 5
