k8s/db-service.yaml
# db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frequent-flier-db
spec:
  selector:
    app: frequent-flier-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
