k8s/flights-service.yaml
# flights-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flights-service
spec:
  selector:
    app: flights-service
  ports:
    - port: 8080
      targetPort: 8080
