k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frequent-flier-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /chat/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8080
          - path: /flights/?(.*)
            pathType: Prefix
            backend:
              service:
                name: flights-service
                port:
                  number: 8080
